--- a/static/css/me.css
+++ b/static/css/me.css
@@ -9,6 +9,11 @@ body {
 .m-padded-tiny {
   padding: 0.3em;
 }
+
+.m-padded {
+  padding: 1em;
+}
+
 .m-padded-large {
   padding: 2em !important;
 }
@@ -146,6 +151,17 @@ body {
 .m-shadow-small {
   -webkit-box-shadow: 0 4px 8px rgba(0,0,0,0.2) !important;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2) !important;
+}
+
+/* --------------position----------------- */
+.m-fixed {
+  position: fixed !important;
+  z-index: 10 !important;
+}
+
+.m-right-bottom {
+  bottom: 0 !important;
+  right: 0 !important;
 }
 
 /* --------------color----------------- */
